[package]
name = "jaso_sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#hangul_jaso = { git = "https://github.com/siabard/hangul_jaso"}
hangul_jaso = { path = "../hangul_jaso"}

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer"]
